add a wrapper function to trans data array; read data from text input

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <canvas id="mycanvas"></canvas>
   <p>
-    <input type="text" id="txt" value="Hello, $title!" />
+    <input type="text" id="data_str" value="[[240, 240], [220, 240], [220, 240], [220, 220], [260, 220], [260, 260], [180, 260], [180, 180], [300, 180], [300, 300], [140, 300], [140, 140], [300, 140]]" />
     <input type="button" id="btn" value="hello" />
   </p>
   <script src="./ext/jquery-1.9.1.min.js"></script>
