清理调试信息

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <canvas id="mycanvas"></canvas>
   <p>
     <input type="text" id="data_str" value="[[240, 240], [220, 240], [220, 240], [220, 220], [260, 220], [260, 260], [180, 260], [180, 180], [300, 180], [300, 300], [140, 300], [140, 140], [300, 140]]" />
-    <input type="button" id="btn" value="hello" />
+    <input type="button" id="btn" value="draw" />
   </p>
   <script src="./ext/jquery-1.9.1.min.js"></script>
   <script src="./ext/processing-1.4.1.min.js"></script>
